ngdialog overlay scrollbar fix

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -4,7 +4,8 @@
 @media screen and (max-width: 767px) {
     body {
         padding-top: 0px;
-        overflow: hidden;
+        margin: 0;
+/*        overflow: hidden;*/
     }
   
     body.notLogged {
@@ -37,7 +38,7 @@ html, body, #app-container {
     padding: 0;
     font-size: 13px;
     color: #585858;
-    overflow: hidden;
+  /*  overflow: hidden;*/
 }
 
 body {
@@ -443,6 +444,12 @@ body {
         width: 100% !important;
         left: 0; right: 0; top: 0; bottom: 0;
     }
+}
+
+/* hack to enable scrollbar with ngDialog */
+/* https://github.com/likeastore/ngDialog/pull/89 */
+div.ngdialog > div.ngdialog-overlay {
+    visibility: hidden !important;
 }
 
 .ngdialog.ngdialog-theme-sending .ngdialog-content {
